envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/tmprl.v1.TmprlService/"
                          route:
                            cluster: tmprl_service
                http_filters:
                  - name: envoy.filters.http.grpc_json_transcoder
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      # fix this path
                      proto_descriptor: "/etc/envoy/descriptors.pb"
                      services: ["tmprl.v1.TmprlService"]
                      print_options:
                        add_whitespace: true
                        always_output_json: true
                        preserve_proto_field_names: true
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: field_encryptor
                        root_id: field_encryptor
                        vm_config:
                          runtime: "envoy.wasm.runtime.v8"
                          code:
                            local:
                              filename: "/etc/envoy/wasm/field_encryptor.wasm"
                          allow_precompiled: true
                  - name: envoy.filters.http.router

  clusters:
    - name: tmprl_service
      connect_timeout: 1s
      type: LOGICAL_DNS
      http2_protocol_options: {}
      load_assignment:
        cluster_name: tmprl_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8081

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
